Výběr operace a kontrola vstupů.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
     <h1>Kalkulačka</h1>
 
     <input type="number" id="cislo1">
-    +
+    <select id="operace">
+      <option value="plus">+</option>
+      <option value="minus">-</option>
+    </select>
     <input type="number" id="cislo2">
     <input type="button" value="=" onclick="vypocet()">
+    <input type="text" id="vysledek" readonly="readonly">
+
+    <div id="vysledek2">???</div>
 
   </body>
 </html>
