--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <select id="operace">
       <option value="plus">+</option>
       <option value="minus">-</option>
+      <option value="krat">x</option>
+      <option value="deleno">:</option>
     </select>
     <input type="number" id="cislo2">
     <input type="button" value="=" onclick="vypocet()">
