--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
     <input type="number" id="cislo2">
     <input type="button" value="=" onclick="vypocet()">
     <input type="text" id="vysledek" readonly="readonly">
+    <br>
+    <input type="checkbox" id="zaokrouhlit">
+    Zaokrouhlit na 
+    <select id="pocetmist">
+      <option value="0">0</option>
+      <option value="1">1</option>
+      <option value="2">2</option>
+    </select>
+    desetinných míst.
+
+
 
     <div id="vysledek2">???</div>
 
